User dashboard nav

--- a/src/main/webapp/WEB-INF/templates/navbar.xhtml
+++ b/src/main/webapp/WEB-INF/templates/navbar.xhtml
@@ -105,7 +105,7 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<h:link outcome="/dashboard" rendered="#{memberSession.customer}"><i
+								<h:link outcome="/user/index" rendered="#{memberSession.customer}"><i
 										class="fa fa-dashboard" aria-hidden="true"></i> Dashboard</h:link>
 								<h:link outcome="/admin/activity-summary" rendered="#{memberSession.admin}"><i
 										class="fa fa-dashboard" aria-hidden="true"></i> Admin</h:link>
