--- a/src/main/webapp/WEB-INF/templates/user.template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/user.template.xhtml
@@ -29,6 +29,8 @@
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
                         <li class="#{view.viewId == '/user/index.xhtml' ? 'active':''}"><h:link outcome="/user/index" value="Activity Summary"/></li>
+						<li class="#{view.viewId == '/user/my-wishlist.xhtml' ? 'active':''}"><h:link outcome="/user/my-wishlist" value="My Wishlist"/></li>
+
                     </ul>
                     <ul class="nav nav-sidebar">
                         <li class='nav-divider'></li>
