--- a/src/main/webapp/WEB-INF/templates/navbar.xhtml
+++ b/src/main/webapp/WEB-INF/templates/navbar.xhtml
@@ -70,10 +70,10 @@
                 <li>
                     <h:link outcome="/cart" rendered="#{!memberSession.admin}">
                         <i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i>
-                        <span class="badge" id="cart-item-count">
+                        <h:panelGroup class="badge" id="cart-item-count">
                             #{cart.numberOfItems()}
 
-                        </span>
+                        </h:panelGroup>
                     </h:link>
                 </li>
                 <li>
