--- a/src/main/webapp/WEB-INF/templates/navbar.xhtml
+++ b/src/main/webapp/WEB-INF/templates/navbar.xhtml
@@ -38,7 +38,7 @@
                         </ui:repeat>
                     </ul>
                 </li>
-                <li><h:link outcome="/auction">Auctions</h:link></li>
+                <li><h:link id="abcdefg" outcome="/auctions/index.xhtml">Auction Listings</h:link></li>
                 <li style="min-width: 500px;">
                     <h:form class="navbar-form navbar-nav">
 
