--- a/src/main/webapp/WEB-INF/templates/user.template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/user.template.xhtml
@@ -41,7 +41,7 @@
                     <ul class="nav nav-sidebar">
                         <li class='nav-divider'></li>
                         <li class="#{view.viewId == '/user/purchase-history.xhtml' ? 'active':''}"><h:link outcome="/user/purchase-history" value="New Purchases" /></li>
-                        <li class="#{view.viewId == '/user/auction-purchase-history.xhtml' ? 'active':''}"><h:link outcome="/user/auction-purchase-history" value="Auction Purchases" /></li>
+                        <li class="#{view.viewId == '/user/items-won.xhtml' ? 'active':''}"><h:link outcome="/user/items-won" value="Auction Purchases" /></li>
                     </ul>
                     <ul class="nav nav-sidebar">
                         <li class='nav-divider'></li>
