--- a/src/main/webapp/WEB-INF/templates/user.template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/user.template.xhtml
@@ -35,8 +35,8 @@
                     <ul class="nav nav-sidebar">
                         <li class='nav-divider'></li>
                         <li class="#{view.viewId == '/user/create-user-sale.xhtml' ? 'active':''}"><h:link outcome="/user/create-user-sale" value="Sell a book"/></li>
-                        <li class="#{view.viewId == '/user/edit-sale.xhtml' ? 'active':''}"><h:link outcome="/user/edit-sale" value="Books I'm selling"/></li>
-                        <li class="#{view.viewId == '/user/sold-books.xhtml' ? 'active':''}"><h:link outcome="/user/sold-books" value="Books I've sold"/></li>
+<!--                        <li class="#{view.viewId == '/user/edit-sale.xhtml' ? 'active':''}"><h:link outcome="/user/edit-sale" value="Books I'm selling"/></li>
+                        <li class="#{view.viewId == '/user/sold-books.xhtml' ? 'active':''}"><h:link outcome="/user/sold-books" value="Books I've sold"/></li>-->
                     </ul>
                     <ul class="nav nav-sidebar">
                         <li class='nav-divider'></li>
