Lost all my work gaah

--- a/src/main/webapp/WEB-INF/templates/admin.template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/admin.template.xhtml
@@ -54,7 +54,7 @@
                         <li class="#{view.viewId.equals('/admin/sales-report.xhtml') ? 'active' : '' }">
                             <h:link value="Sales" outcome="sales-report" />
                         </li>
-                        <li class="#{view.viewId.equals('/admin/sales-report.xhtml') ? 'active' : '' }">
+                        <li class="#{view.viewId.equals('/admin/stock-report.xhtml') ? 'active' : '' }">
 							<h:link value="Out of Stock" outcome="stock-report" />
 						</li>
                     </ul>
